[package]
name = "rcomp"
version = "0.3.0"
authors = ["Mohammed Saud <md.saud020@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = { version = "0.9", features = ["composite", "randr", "xlib_xcb", "dri2", "shape", "damage" ] }
x11 = { version = "2.18.2", features = ["xlib", "glx"] }
gl = "0.14.0"
